<resources>

    <string name="app_name">要货啦</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索您想要的商品</string>
    <string name="search_hint2">输入您所需要的产品</string>
    <string name="history_search">历史搜索</string>
    <string name="microphone_hint">按住说出你要的商品</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="hot_sale">热卖产品</string>
    <string name="home_page">首页</string>
    <string name="classification">分类</string>
    <string name="shopping_cart">购物车</string>
    <string name="my">我的</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号：</string>
    <string name="verification">验证</string>
    <string name="verification_phone">验证手机</string>
    <string name="verification_code">验证码：</string>
    <string name="login_hint">点击-登录 即表示你同意《法律声明及隐私政策》</string>
    <string name="user_nike_name">点击修改昵称</string>
    <string name="completed_orders">已完成订单</string>
    <string name="for_receiving_orders">待收货订单</string>
    <string name="collect_baby">收藏宝贝</string>
    <string name="empty">清空</string>
    <string name="feedback">联系客服</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_text">Copyright2015-2016\n上海青云信息科技有限公司</string>
    <string name="about_us_hint">要货啦是一个专注于“互联网＋要货”的移动商业B2B平台，是专业服务于店家“批发采购、进货、要货”。以“资源整合、合作共赢”为目的，致力于建立“工厂”直达"店家”的便捷平台，大幅提升传统行业批发零售的效率，立志于在大“互联网＋”的时代背景下，打造出便利的“批发采购、进货、要货”商业新生态。</string>
    <string name="order_details">订单详情</string>
    <string name="order_status_hint">（货物预计1-3工作日为您送达）</string>
    <string name="again_to_buy">再次购买</string>
    <string name="a_single_again">再来一单</string>
    <string name="update_user_info">修改个人信息</string>
    <string name="completed">完成</string>
    <string name="avatar">头像</string>
    <string name="nike_name">昵称：</string>
    <string name="phone_num">手机号码：</string>
    <string name="shipping_address_management">收货地址管理</string>
    <string name="login_out">退出当前账号</string>
    <string name="select_shipping_address">选择收货地址</string>
    <string name="new_shipping_address">新增收货地址</string>
    <string name="consignee">收货人：</string>
    <string name="consignee_hint">请输入中文姓名</string>
    <string name="contact">联系方式：</string>
    <string name="contact_hint">请输入收货人手机号码</string>
    <string name="area">所在区域：</string>
    <string name="select_area">选择所在区域</string>
    <string name="area_hint">请输入送货区域如上海市闸北区</string>
    <string name="addr_details">详细地址：</string>
    <string name="addr_details_hint">请输入详细地址</string>
    <string name="addr_hint">设为默认地址：每次下单会使用该地址</string>
    <string name="save_shipping_address">保存并使用地址</string>
    <string name="edit">编辑</string>
    <string name="all_select">全选</string>
    <string name="order_now">立即下单</string>
    <string name="fill_orders">填写订单</string>
    <string name="submit_order">提交订单</string>
    <string name="pay_way">目前仅限货到付款</string>
    <string name="product_details">商品详情</string>
    <string name="graphic_introduction">产品介绍</string>
    <string name="now_add_shopping_cart">立即加入购物车</string>
    <string name="pay_way_hint">货到付款</string>
    <string name="product_introduction">产品介绍</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="all">全部</string>
    <string name="user_agreement">用户协议</string>
    <string name="load_hint">正在加载...</string>

</resources>