<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="@dimen/view_min_width"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/margin_nomarl"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_slightlybigger" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_nomarl"
            android:text="@string/delete"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_normal"
            android:visibility="gone" />
    </RelativeLayout>

    <include layout="@layout/view_wide_line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:minWidth="90dp"
                    android:text="@string/consignee"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/consignee_hint"
                    android:inputType="text"
                    android:maxEms="8"
                    android:singleLine="true"
                    android:textColor="@color/text_color_dark"
                    android:textColorHint="@color/text_color_shallow"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <include layout="@layout/view_narrow_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:minWidth="90dp"
                    android:text="@string/contact"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/contact_hint"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/text_color_dark"
                    android:textColorHint="@color/text_color_shallow"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <include layout="@layout/view_narrow_line" />

            <LinearLayout
                android:id="@+id/ll_area"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:minWidth="90dp"
                    android:text="@string/area"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/area"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="11dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/enter_icon" />
            </LinearLayout>

            <include layout="@layout/view_narrow_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:minWidth="90dp"
                    android:text="@string/addr_details"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/addrDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/addr_details_hint"
                    android:inputType="text"
                    android:textColor="@color/text_color_dark"
                    android:textColorHint="@color/text_color_shallow"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <include layout="@layout/view_narrow_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/defaultAddr"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/addr_selector_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:text="@string/addr_hint"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/saveShippingAddress"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/save_shipping_address"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>