<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="@dimen/view_min_width"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/margin_nomarl"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_shipping_address"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_slightlybigger" />
    </RelativeLayout>

    <include 
        layout="@layout/view_wide_line"/>
    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/line_bg"
        android:dividerHeight="1dp"
        android:fadingEdge="none"
        android:scrollbars="none" />

    <TextView
        android:id="@+id/shippingAddressManagement"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/red"
        android:text="@string/shipping_address_management"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>