<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="@dimen/view_min_width"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/margin_nomarl"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/collect_baby"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_slightlybigger" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_nomarl"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_nomarl"
            android:paddingRight="@dimen/margin_nomarl"
            android:text="@string/empty"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>

    <com.yaohuola.view.SilderListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:cacheColorHint="#00000000"
        android:divider="@color/main_bg"
        android:dividerHeight="5dp"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />

</LinearLayout>