<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="@dimen/view_min_width"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/margin_nomarl"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_user_info"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_slightlybigger" />

        <TextView
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_nomarl"
            android:text="@string/completed"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>

    <include layout="@layout/view_wide_line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:text="@string/avatar"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <com.library.view.RoundImageView
                    android:id="@+id/avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/enter"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/default_avatar_icon" />

                <ImageView
                    android:id="@+id/enter"
                    android:layout_width="7dp"
                    android:layout_height="11dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/enter_icon" />
            </RelativeLayout>

            <include layout="@layout/view_narrow_line" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:text="@string/nike_name"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/nikeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:background="@null"
                    android:minWidth="100dp"
                    android:gravity="center_horizontal"
                    android:maxEms="8"
                    android:textSize="@dimen/text_size_normal"
                    android:inputType="text"
                    android:singleLine="true"
                    android:src="@drawable/enter_icon" />
            </RelativeLayout>

           <include layout="@layout/view_narrow_line" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:text="@string/phone_num"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/phoneNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:singleLine="true"/>
            </RelativeLayout>

            <include layout="@layout/view_narrow_line" />

            <RelativeLayout
                android:id="@+id/shippingAddressManagement"
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_nomarl"
                    android:text="@string/shipping_address_management"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/text_size_normal" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="11dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="@dimen/margin_nomarl"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/enter_icon" />
            </RelativeLayout>

            <include layout="@layout/view_narrow_line" />
        </LinearLayout>
    </ScrollView>
<TextView
        android:id="@+id/loginOut"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/red"
        android:text="@string/login_out"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>