<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="@dimen/view_min_width"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/margin_nomarl"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_us"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_size_slightlybigger" />
    </RelativeLayout>

    <include layout="@layout/view_wide_line" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/about_us_logo_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/text_size_normal" />
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="315dp"
                android:paddingTop="15dp"
                android:lineSpacingExtra="5dp"
                android:paddingLeft="@dimen/margin_nomarl"
                android:paddingRight="@dimen/margin_nomarl"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color_dark"
                android:text="@string/about_us_hint"
                android:background="@color/main_bg"/>
           <TextView 
               android:layout_width="wrap_content"
                android:lineSpacingExtra="5dp"
                android:layout_marginBottom="35dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color_dark"
                android:text="@string/about_us_text"
               android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>